--- a/web/public_html/html/index.html
+++ b/web/public_html/html/index.html
@@ -11,6 +11,7 @@
     </head>
     
     <body>
+
         <div id="wrapper">
             
             <div id="meny">
@@ -42,5 +43,8 @@
                 Och så vidare.
             </p>
         </div>
+
+        <div>Hello world potatis</div>
+
     </body>
 </html>
