Testing after troubleshooting
Been troubleshooting git, doing this commit to see if everything works
as it should now.

--- a/web/public_html/html/admin.html
+++ b/web/public_html/html/admin.html
@@ -130,6 +130,7 @@
             <p>Det är fritt att lägga upp bilder för att diskutera här.</p>
             
             <h1> PLACEHOLDER - BILDSPEL SKA LIGGA HÄR </H1>
+            <p> funkar inte detta får jag damp </p> 
             
         </div>
 
