--- a/webbsida/web/index.xhtml
+++ b/webbsida/web/index.xhtml
@@ -125,7 +125,7 @@
 
             <h2>Måndag</h2>
                 <p>Fisk med maskmasdkoasd</p>  
-                <p>Spaghetti med köttfärsås</p>
+                <p>Spaghetti med köttfäås</p>
             <br/> 
             <h2>Tisdag</h2>
                 <p>Lasange</p>
@@ -193,7 +193,7 @@
             
             <h:form>
                 <h:inputText id="inputtxt" value="#{user.name}" />
-                <h:commandButton id="submit" value="Submit" action="home" />
+                <h:commandButton id="submit" value="Submit" action="home" style="color:black;" />
             </h:form>   
             
         </div>
